Added swagger definition for put and post.
